# game

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
CMake/Modules/: FindUrho3D.cmake
doc/: communication_scheme.dot
lib/jsoncpp/: CMakeLists.txt
lib/sqlite3/: CMakeLists.txt
src/: project_defines.h.in
src/client/: CMakeLists.txt  character.cpp  character.h  client.cpp  client.h  game.cpp  game.h  genericmenu.cpp  genericmenu.h  loadingscreen.cpp  loadingscreen.h  main.cpp  mainmenu.cpp  mainmenu.h  player.h  settings.cpp  settings.h  spacelgame.cpp  spacelgame.h  uievents.cpp  uievents.h
src/client/network/: clientpackethandler.cpp  clientpackethandler.h
src/client/ui/: ModalWindow.cpp  ModalWindow.h  ProgressBar.cpp
src/common/: CMakeLists.txt  config.cpp  config.h  exception_utils.h  macro_utils.h  porting.cpp  porting.h  thread_utils.cpp  thread_utils.h  threadsafe_utils.h  time_utils.h
src/common/engine/: gameobject.cpp  gameobject.h  generators.cpp  generators.h  inventory.cpp  inventory.h  item.cpp  item.h  namegenerator.cpp  namegenerator.h  object.h  objectmanager.cpp  objectmanager.h  player.cpp  player.h  server.cpp  server.h  space.cpp  space.h  unit.h
src/common/engine/databases/: database-sqlite3.cpp  database-sqlite3.h  database.h
src/common/engine/network/: networkprotocol.cpp  networkprotocol.h  serverpackethandler.cpp
src/common/engine/ui/: ProgressBar.h
src/unittests/: CMakeLists.txt  GeneratorsTests.h  SettingsTests.h  TimeTests.h  UIEventTests.h  main.cpp
util/travis/: before_install.sh  checkstyle.py  script.sh  unittests.sh
